# RH_demo

./: .gitignore  AGENTS.md  README.md  lake-manifest.json  lakefile.lean  pyproject.toml
.lake/: lakefile.olean  lakefile.olean.trace
LICENSES/: CC_BY_40
arxiv_submission/: ERURH_ABC_preprint.tex  ERURH_Conditional_Proof.tex  README.md  Theorem_ABC_preprint.tex  assumptions_ledger.tex  lean_axioms_shim_bundle.txt  lean_gap_statements.txt  lean_master_axioms.txt  reproducibility_manifest.txt
docs/: ERURH_A1_A2_Status.md  ERURH_A1_BuchstabMultiplier.md  ERURH_A2_AnalyticPlan.md  ERURH_AlphaCertificate_Strategy.md  ERURH_AxiomsAndGaps.md  ERURH_BetaAssumptions_Snapshot.md  ERURH_BridgeToStrong_Alpha.md  ERURH_ExplicitCoefficients_Plan.md  ERURH_ExplicitFormula_Plan.md  ERURH_Formalisms_Analytic_B.md  ERURH_Gates_Conceptual.md  ERURH_HOWTO_Reproduce.md  ERURH_HbWeak_AnalyticTheorem.md  ERURH_Hb_Pointwise_Program.md  ERURH_LSgamma_and_Mode_Demos.md  ERURH_LargeSieveGamma_Plan.md  ERURH_MainTheorem.md  ERURH_PlanB_Assumptions.md  ERURH_PlanB_Gaps_Map.md  ERURH_Preprint_Alpha.md  ERURH_Preprint_AlphaToBeta.md  ERURH_Proof_Status.md  ERURH_RMSLocal_Proof.md  ERURH_RemainingAxioms_Internal.md  ERURH_SmoothedJRel_Alpha.md  ERURH_jRel_Audit_Alpha.md  ERU_AT_A_GLANCE.md
eru_upgrade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: make_arxiv_bundle.ps1  verify_gate.py
tests/: test_smoke.py
tools/: check_no_noncore_axioms.py  check_rms_context.py  check_rms_mode_bridge.py  make_beta_certificate.py  make_certificate_values.py  (+3 more)
(+449 files in other folders)
