[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eru-upgrade"
version = "0.4.0"
description = "Extensions and tooling for ERU analyzer plugins."
authors = [{ name = "ERU Team" }]
readme = "AGENTS.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "mpmath>=1.3",
]

[project.scripts]
eru-ik = "extensions.eru_interpretations.cli:main"

[tool.setuptools.packages.find]
where = ["."]
